--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ timezone: Asia/Seoul
 
 title: LooKa                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: "brainctl get all -o md >> blog"   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
@@ -32,20 +32,20 @@ description: >-                        # used by seo meta and the atom feed
 url: 'https://looka149.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: looka149             # change to your github username
 
-twitter:
-  username: twitter_username            # change to your twitter username
+# twitter:
+#   username: twitter_username            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: looka149
+  email: looka149@naver.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    # - https://twitter.com/username      # change to your twitter homepage
+    - https://github.com/looka149       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -80,10 +80,10 @@ theme_mode:   # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn:
+img_cdn: '/assets/img/'
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: 'avatar.png'
 
 # boolean type, the global switch for ToC in posts.
 toc: true
